--- a/src/componentes/Quiz/index.css
+++ b/src/componentes/Quiz/index.css
@@ -1,16 +1,18 @@
-.opcoes li {
-    background-color: rgb(45, 45, 197);
-    list-style: none;
-    border: solid 1px rgb(0, 0, 255);
+.divOpcoes {
+    background-color: rgb(74, 121, 240);
     color: aliceblue;
+    list-style: none;
+    border: solid 1px rgb(0, 0, 0);
     cursor: pointer;
     margin: 5px;
 }
 
-.correto {
-    border: solid 3px rgb(36, 246, 8);
+.correta {
+    background-color: rgb(36, 246, 8);
+    color: black;
 }
 
-.errado {
-    border: solid 3px rgb(248, 20, 20);
+.errada {
+    background-color: rgb(248, 20, 20);
+    color: black;
 }
