--- a/src/componentes/Quiz/index.css
+++ b/src/componentes/Quiz/index.css
@@ -4,11 +4,20 @@
 }
 
 .quiz {
+    height: auto;
+    width: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quiz-conteiner {
 
     border: solid 2px black;
 
-    max-width: 700px;
-    min-width: none;
+    max-width: none;
+    min-width: 700px;
 
     display: flex;
     flex-direction: column;
@@ -17,6 +26,8 @@
     justify-content: center;
 
     padding: 20px 5px 20px 5px;
+
+    margin: 50px 0px 50px 0px;
 }
 
 .quiz_pergunta {
